--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.9.0",
+    "gh-pages": "^4.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
